 /* $Id: ChangeLog,v 1.720 2000-02-10 01:49:01 bird Exp $ */

 2000-02-10: Sander van Leeuwen <sandervl@xs4all.nl>
	- GDI32: Added support for memory map handles in CreateDIBSection
                 Fixed CreateICA/W; Open32's version is case sensitive whereas
                 win32's apparently isn't.
	- TOOLS\makefile: fixed clean build
	- src\makefile: fixed clean build
	- src\makefile.smp: fixed incorrect dir change

 2000-02-10: Knut Stange Osmundsen (knut.stange.osmundsen@pmsc.no)
        - *: Updated the source tree to use autogenerated dependencies.
             You will have to do a 'nmake dep' from either /src or / before
             being able to make anything.
             -All makefiles is required to have a 'dep' rule.
             -All dll makefiles is now required to have a 'lib' rule which
              makes the libraries for the module. This rule should also
              check that the library in $(PDWIN32_LIB) is up-to-date.
        - Tools/FastDep: Dependency tool. (Fast=Quick-and-Dirty)
             Moved from /src/win32k. This is currently used to generate
             dependency information.
             Note that it doesn't have any precompiler logic! This is causeing
             some warnings...
        - include/pdwin32.tool: Two new tools DEPEND and DOWITHDIRS.
        - src/makefile: used the DOWITHDIRS to do cleanup, lib and dep.

 2000-02-10: Edgar Buerkle <Edgar.Buerkle@gmx.net>
	- GDI32: Fix alignment for 1 & 4 bits bitmaps (dibsection)
	- NTDLL: Pretend no debugger is active in NtQueryInformationProcess

 2000-02-09: Sander van Leeuwen <sandervl@xs4all.nl>
	- USER32: Implemented WaitForInputIdle
                  ScrollWindow fix; don't call InvalidateRect as WinScrollWindow
                  already invalidates the area (and the call to InvalidateRect was
                  wrong as it has to include the erase flag; should have called
                  RedrawWindow instead)